--- a/css/resume.css
+++ b/css/resume.css
@@ -175,9 +175,6 @@ a:hover, a:focus, a:active {
   color: #2980b9;
 }
 
-#k8s{
-  opacity: 0.5;
-  width: 42px;
-  /* bottom: 1vh !important; */
-  margin-bottom: 1vh;
+.flag-icon{
+    margin-right: 1vw !important;
 }
